--- a/environment.yml
+++ b/environment.yml
@@ -7,13 +7,14 @@ dependencies:
   - scipy
   - pandas
   - matplotlib
+  - seaborn
   - scikit-learn
   - flask
   - jupyterlab
   - pip
   - pip:
-      - tensorflow==2.19.0
+      - tensorflow==2.20.0
       - keras-tuner==1.4.6
       - opencv-python==4.12.0.88
-      - pillow==10.1.0
+      - pillow>=12.1.0
       - emnist
