--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask==2.3.3
-tensorflow==2.19.0
-keras==3.13.2
-numpy==2.1.3
-Pillow==10.1.0
+Flask>=2.3
+tensorflow==2.20.0
+numpy>=2.1
+Pillow>=12.1.0
 opencv-python==4.12.0.88
+keras-tuner==1.4.6
+emnist
+seaborn
+matplotlib
+pandas
+scikit-learn
